<resources>
    <string name="app_name">EngineerExercise1</string>
    <string name="cust_statement"><b>GreenFlag customers can create an account to acces</b></string>
    <string name="line1">Car health updates</string>
    <string name="car_health">Car health updates</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email"></string>
    <string name="see_criteria_below">  See criteria below...</string>
    <string name="create_password">Create password</string>
    <string name="request_rescue">Request a rescue online</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password_should">Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lower case letter. You can use special characters.</string>
    <string name="next_btn">Next</string>
    <string name="str_info" />
</resources>