<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="298dp"
        android:layout_height="79dp"
        android:layout_marginTop="72dp"
        android:contentDescription="Green Flag header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_green_flag" />

    <TextView
        android:id="@+id/cust_statement"
        android:layout_width="301dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_weight="0.005"
        android:text="@string/cust_statement"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/create_btn"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="306dp"
        android:layout_height="60dp"
        android:contentDescription="Create account button"
        android:onClick="launchSecondActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cust_statement"
        app:layout_constraintVertical_bias="0.922"
        app:srcCompat="@drawable/gradient_button_background" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="305dp"
        android:layout_height="82dp"
        app:layout_constraintBottom_toTopOf="@+id/create_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cust_statement"
        app:layout_constraintVertical_bias="0.283">

        <LinearLayout
            android:layout_width="37dp"
            android:layout_height="88dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tick1"
                android:layout_width="22dp"
                android:layout_height="22dp"
                app:srcCompat="@drawable/tick" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="22dp"
                android:layout_height="22dp"
                app:srcCompat="@drawable/tick" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="22dp"
                android:layout_height="22dp"
                app:srcCompat="@drawable/tick" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/line2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_health"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_rescue"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Policy information"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create an account"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/create_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/create_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>